--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,9 @@
 @media only screen and (max-width: 1200px) {
-	body {font-size: 18px;}
+	body {
+
+		font-size: 18px;
+	}
+
 	.row {
 		width: 90%;
 	}
