--- a/css/media.css
+++ b/css/media.css
@@ -78,10 +78,32 @@
 
 @media only screen and (max-width: 666px) {
 	body {font-size: 14px;}
-	
+
+
 	header #main-nav {
+		opacity: 0.8;
+	}	
+
+	header #main-nav ul {
+		float: left;
+	}
+
+	header #main-nav ul li{
+		display: block;
 		display: none;
 	}
+
+	header #main-nav i {
+		display: inline-block;
+		float: right;
+		margin-top: 20px;
+		margin-right: 30px;
+		font-size: 2.0em;
+		color: #bbb;
+	}
+
+
+
 }
 
 @media only screen and (max-width: 480px) {
